$Id$

Summary of Changes for Duro

Changes for Duro 0.16

- FOREACH loop

- INDEX, DROP INDEX

- EXPLAIN

- RDB_get_table() now raises a name_error if the table is not found.

- Duro D/T now uses GNU readline.

Changes for Duro 0.15

- Replaced PRINT/PRINTLN/READLN by put/put_line/get_line.

- Changed WITH and EXTEND syntax according to Database Explorations.

- Duro D/T now supports headings in relation selectors.

- Duro D/T sets LC_CTYPE and LC_COLLATE locales according to the environment.

- Explicit BEGIN TRANSACTION no longer required in Duro D/T for invoking
  user-defined operators and using user-defined types.

- Built-in types and operators are now lowercase, Duro D/T converts identifiers to lowercase.

- Renamed RDB_create_XXX functions for non-scalar types to RDB_new_XXX.

- Added RDB_del_nonscalar_type(). Changed RDB_drop_type to support only user-defined types.

- Replaced iargp and iarglen parameters of RDB_create_ro_op() and RDB_create_update_op()
  by explicit source code parameter.

- Trace output can be enabled using RDB_env_trace() and trace().

- Tuple JOIN is now tuple UNION.

- Added RDB_is_selector().

- Removed RDB_tx_env().

- Added aggregate operators AND and OR as synonyms for ALL and ANY.

- Added XOR.

- Changed interface and calling conventions for user-defined operators.

- Added RDB_get_update_op to the public interface. Renamed RDB_call_ro_op
  and RDB_call_update_op as RDB_call_ro_op_by_name and RDB_call_update_op_by_name.
  Added RDB_call_update_op with new semantics.

- Conversion of expressions etc. to string is now part of the core.

- File I/O

- Upgrade to Berkeley DB 5.3. (But older versions should work too)

- Storing user-defined operators as source code

- RDB_expr_type now always raises an error if the type could not be determined.

- Change in catalog table SYS_POSSREPCOMPS

- Changed type handling in RDB_evaluate(), RDB_call_ro_op(), and
  RDB_call_update_op(),

Duro D/T:
