@@ -15,12 +15,20 @@ source [file dirname [info script]]/setup.tcl
 
 test envclose {closing environment} -setup $SETUP -body {
     set dbenv [duro::env open [configure -tmpdir]/dbenv]
-	
+
+    set testdb TEST
+
     # Create Database
-    duro::db create $dbenv TEST
+    duro::db create $dbenv $testdb
+
+    # Print databases
+    set dbs [duro::env dbs $dbenv]
+    if {$dbs != $testdb} {
+        error "dbs should be $testdb, but is not"
+    }
 	
     # Start transaction
-    set tx [duro::begin $dbenv TEST]
+    set tx [duro::begin $dbenv $testdb]
 
     # Close environment while the transaction is still active
     duro::env close $dbenv
